fixed header on mobile

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
 #about-text,
 #project-text {
     font-weight: 500;
-    font-size: 1.6em;
+    font-size: 1.7em;
 }
 
 .figure-caption {
@@ -53,4 +53,17 @@ a:hover {
 
 .figure-caption {
     color: black;
+}
+
+@media (max-width: 767.98px) {
+    #header {
+        font-size: 2.5em;
+    }
+    #about-text,
+    #project-text {
+        font-size: 1.3em;
+    }
+    #footer-text {
+        font-size: 1em;
+    }
 }
